Version 0.23 - 6 September 2007, by Pascal "Pixel" Rigaux

- do not start xfs for the test (#33219)

Version 0.22 - 27 August 2007, by Pascal "Pixel" Rigaux

- do configure XFS if installed
- when removing/replacing an InputDevice section, ensure we remove the
  corresponding entry in ServerLayout. ie do not rely on InputDevice sections
  to use XFdrake-compatible Identifiers (as suggested by fcrozat)
- add avivo in the Xorg drivers list
- handle libglx.so provided by standard.conf alternative
- handle x11-driver-video-fglrx instead of ati

Version 0.21 - 8 August 2007, by Pascal "Pixel" Rigaux

- handle nvidia-current instead of nvidia97xx (thanks to Anssi)
- handle x11-driver-video-$nvidia instead of $nvidia
- adapt to kbd instead of console-tools: s/kmap/map/

Version 0.20 - 3 August 2007, by Pascal "Pixel" Rigaux

- fix detection of touchpad on some kernels (#31584)
  (need drakxtools-backend >= 10.4.145)
- internal: add many options as having to be used only once, easing their use
  and fixing setting them 
  (eg #31942 where one can't click "Options" after setting EXA)
- drop support for installing/configuring 915resolution 
  (no more needed since x11-driver-video-intel 2.0)
- do not configure using xfs anymore (#32051)

Version 0.19 - 9 July 2007, by Pascal "Pixel" Rigaux

- wacom configuration: 
  o enhance configuration by using /dev/input/by-id/xxx
    (need drakxtools-backend >= 10.4.144)
  o add "pad" InputDevice section
- fix displaying "3D hardware acceleration: no" for nvidia proprietary driver
  (#31326)

Version 0.18 - 14 June 2007, by Pascal "Pixel" Rigaux

- handle resolution switch via xrandr without restarting X (#30896)
- add 1366x768, 1360x768 and 1360x765 resolutions
- add big standard resolutions (4/3, 16/10, 16/9)
- [bugfix] fix test message not translated (#30261)
- remove all fglrx options, hopefully default is good enough
  (and at least MonitorLayout option is depreacated as reported on cooker)
