@@ -1,3 +1,5 @@
+- fix default_headers when XFS is installed
+
 Version 0.23 - 6 September 2007, by Pascal "Pixel" Rigaux
 
 - do not start xfs for the test (#33219)
